force-app/main/default/objects/Case/fields/Call_Handling_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_Handling_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Handling Completed?</label>
    <type>Checkbox</type>
</CustomField>