force-app/main/default/objects/Case/fields/Call_Wrap_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Wrap_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Wrap Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>