force-app/main/default/objects/Case/fields/Campaign_Start_Date_1st__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date_1st__c</fullName>
    <description>Used to return whether Campaign Start is NOT on the 1st of the month to trigger extra approvals for Sales Offers</description>
    <formula>IF (  DAY( Campaign_Start_Date__c ) = 1 ,FALSE, TRUE)</formula>
    <label>Campaign Start Date 1st</label>
    <type>Checkbox</type>
</CustomField>