force-app/main/default/objects/Case/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <description>Used in Sales Offers Request</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For Campaigns, you can only choose the 1st of the month.</inlineHelpText>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>