force-app/main/default/objects/Case/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <description>QCC: Used to store the cancellation fee for the case specific ticket</description>
    <inlineHelpText>CCC: Based on Fare rules</inlineHelpText>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>