force-app/main/default/objects/Case/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>QCC: Used to store the ticket cancelled date on the case specific ticket</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>