force-app/main/default/objects/Case/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <inlineHelpText>Please Note all QDM reports include all Carriers unless specified. This is to ensure market share is always included.</inlineHelpText>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All including YY</fullName>
                <default>true</default>
                <label>All including YY</label>
            </value>
            <value>
                <fullName>QF</fullName>
            </value>
            <value>
                <fullName>QF+JQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>