force-app/main/default/objects/Case/fields/Case_Category_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Count__c</fullName>
    <description>QCC: Holds the count of Case Category records related to this Case</description>
    <label>Additional Case Categories Count</label>
    <summaryForeignKey>Case_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>