force-app/main/default/objects/Case/fields/Case_Open_or_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_or_Overdue__c</fullName>
    <description>QCC: OM Reports</description>
    <formula>IF((TEXT(Status) != &apos;Closed&apos; &amp;&amp;  Due_Date__c &lt; TODAY()) ,&apos;Overdue&apos;, IF(TEXT(Status) != &apos;Closed&apos;, &apos;Open&apos;, &apos;&apos;))</formula>
    <label>Case Open or Overdue</label>
    <type>Text</type>
</CustomField>