force-app/main/default/objects/Case/fields/Case_Open_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Time_Days__c</fullName>
    <description>Calculates how many days a case has been opened</description>
    <formula>IF(  ISBLANK( Reopened_Date__c ) , IF( ISBLANK( ClosedDate ) , Today() -  DATEVALUE(CreatedDate), DATEVALUE(ClosedDate) -  DATEVALUE(CreatedDate)) , Today() -  DATEVALUE(CreatedDate)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Open Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>