force-app/main/default/objects/Case/fields/Case_Reopened_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopened_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopened leadership flag</label>
    <type>Checkbox</type>
</CustomField>