force-app/main/default/objects/Case/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>This field has been created to be used in Freight CSU reporting</description>
    <formula>IF( CONTAINS(Text(Status) , &apos;Close&apos;),&apos;Closed&apos;,  IF( ISPICKVAL(Status, &apos;Open&apos;) , &apos;Open&apos;, &apos;Open&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>