force-app/main/default/objects/Case/fields/Case_Status_Counter__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reopened Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>