force-app/main/default/objects/Case/fields/Case_text_POC__c.field-meta.xml
<CustomField>
    <fullName>Case_text_POC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Note text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>