force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>QCC: Created to show/store Issue Category.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Accommodation/Reimbursement of Expenses</fullName>
            </value>
            <value>
                <fullName>Account Queries</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Aircraft Condition</fullName>
            </value>
            <value>
                <fullName>Aircraft Schedule Change/Notification</fullName>
            </value>
            <value>
                <fullName>Airports</fullName>
            </value>
            <value>
                <fullName>Airport Security</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>AQIRE</fullName>
            </value>
            <value>
                <fullName>ARD Web</fullName>
            </value>
            <value>
                <fullName>Audits</fullName>
            </value>
            <value>
                <fullName>Award Bookings</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>BART Document</fullName>
            </value>
            <value>
                <fullName>Beverage Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Blue Prism</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Bounce Back</fullName>
            </value>
            <value>
                <fullName>Cabin Baggage</fullName>
            </value>
            <value>
                <fullName>Call outs</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cancellation Fees</fullName>
            </value>
            <value>
                <fullName>Carbon Offset</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Catering Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Charter Flights</fullName>
            </value>
            <value>
                <fullName>Chauffeur Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>