force-app/main/default/objects/Case/fields/CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address__c</fullName>
    <description>Used for email template CC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>