force-app/main/default/objects/Case/fields/CCA_Approval_done__c.field-meta.xml
<CustomField>
    <fullName>CCA_Approval_done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CCA Approval done?</description>
    <label>CCA Approval done?</label>
    <type>Checkbox</type>
</CustomField>