force-app/main/default/objects/Case/fields/CCA_approval_level_check__c.field-meta.xml
<CustomField>
    <fullName>CCA_approval_level_check__c</fullName>
    <formula>OR(Account_Owner_asper_RelatedAcct__c=&apos;Chris McBride&apos;, Account_Owner_asper_RelatedAcct__c=&apos;Eloise Tsoukas&apos;, Account_Owner_asper_RelatedAcct__c=&apos;Mai Pham&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCA approval level check</label>
    <type>Checkbox</type>
</CustomField>