force-app/main/default/objects/Case/fields/CCC_And_B_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>CCC_And_B_Case_Type__c</fullName>
    <description>Differentiation of the case type for QCC. CRM-5272</description>
    <label>CCC And B Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stand-alone</fullName>
                <default>true</default>
                <label>Stand-alone</label>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>