force-app/main/default/objects/Case/fields/CCC_R1_CCAT_Type__c.field-meta.xml
<CustomField>
    <fullName>CCC_R1_CCAT_Type__c</fullName>
    <description>Field to note down CCAT Type of Case. Introduced as part of Reimagine Phase1- QSFR-23.</description>
    <label>CCAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>EU Compensation</fullName>
            </value>
            <value>
                <fullName>Exco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>