force-app/main/default/objects/Case/fields/Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Description__c</fullName>
    <description>Change Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>