force-app/main/default/objects/Case/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <description>CRM-9574:QCC: Introduce Channel Type as a Secondary &quot;Case Origin&quot;</description>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AKL BackOffice</fullName>
            </value>
            <value>
                <fullName>Baggage Expense Form</fullName>
            </value>
            <value>
                <fullName>Insurance Letter Form</fullName>
            </value>
            <value>
                <fullName>Qantas Austria</fullName>
            </value>
            <value>
                <fullName>Qantas Benelux</fullName>
            </value>
            <value>
                <fullName>Qantas Germany</fullName>
            </value>
            <value>
                <fullName>Qantas Italy</fullName>
            </value>
            <value>
                <fullName>Qantas Scandinavia</fullName>
            </value>
            <value>
                <fullName>Qantas South Africa</fullName>
            </value>
            <value>
                <fullName>Qantas Switzerland</fullName>
            </value>
            <value>
                <fullName>Reimbursement Form</fullName>
            </value>
            <value>
                <fullName>SHR CSCC</fullName>
            </value>
            <value>
                <fullName>SHR CustQ</fullName>
            </value>
            <value>
                <fullName>SHR EK</fullName>
            </value>
            <value>
                <fullName>SHR Insight</fullName>
            </value>
            <value>
                <fullName>SHR Jpn</fullName>
            </value>
            <value>
                <fullName>SHR Kor</fullName>
            </value>
            <value>
                <fullName>SHR Musical</fullName>
            </value>
            <value>
                <fullName>SHR OW</fullName>
            </value>
            <value>
                <fullName>SHR QET</fullName>
            </value>
            <value>
                <fullName>WNS BackOffice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>