force-app/main/default/objects/Case/fields/Check_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Status__c</fullName>
    <description>QCC; Used to create/store the Check In Status for the case specific flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Boarding Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>