force-app/main/default/objects/Case/fields/CL_Date_of_Join__c.field-meta.xml
<CustomField>
    <fullName>CL_Date_of_Join__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CL Date of Join</label>
    <type>Date</type>
</CustomField>