force-app/main/default/objects/Case/fields/CL_Endorser__c.field-meta.xml
<CustomField>
    <fullName>CL_Endorser__c</fullName>
    <description>This is the recommended Endorser</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Endorser for this CL Renewal</inlineHelpText>
    <label>CL Endorser</label>
    <length>80</length>
    <type>Text</type>
</CustomField>