force-app/main/default/objects/Case/fields/CL_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Expiry_Date__c</fullName>
    <description>Date Chairman&apos;s Lounge Membership will expire
Supplied by Loyalty</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Chairman&apos;s Lounge Membership will expire from Loyalty</inlineHelpText>
    <label>CL Expiry Date</label>
    <type>Date</type>
</CustomField>