force-app/main/default/objects/Case/fields/Claim_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Stage__c</fullName>
    <label>Claim Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Investigation</fullName>
                <label>Investigating</label>
            </value>
            <value>
                <fullName>Decision Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>With Station</label>
            </value>
            <value>
                <fullName>with Customer</fullName>
            </value>
            <value>
                <fullName>Approvals</fullName>
                <label>Payment Pending</label>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>