force-app/main/default/objects/Case/fields/Claims_Summary__c.field-meta.xml
<CustomField>
    <fullName>Claims_Summary__c</fullName>
    <description>New Claims Summary field CRM-9202</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claims Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>