force-app/main/default/objects/Case/fields/Closed_By_Profile__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Profile__c</fullName>
    <description>QCC: Back end field used in reports</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed By Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>