force-app/main/default/objects/Case/fields/Closed_Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Closed_Case_Age__c</fullName>
    <description>QAC -  Calculate days between Closed date and today for closed case.</description>
    <formula>IF(IsClosed = TRUE, TODAY()-DATEVALUE(ClosedDate),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>