force-app/main/default/objects/Case/fields/ClosedByLocation__c.field-meta.xml
<CustomField>
    <fullName>ClosedByLocation__c</fullName>
    <description>QCC: To store Closed User Location</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed By Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>