force-app/main/default/objects/Case/fields/ClosedByManager__c.field-meta.xml
<CustomField>
    <fullName>ClosedByManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Back end Field, used for reports</description>
    <label>Closed By Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>