force-app/main/default/objects/Case/fields/Colour_of_Bag__c.field-meta.xml
<CustomField>
    <fullName>Colour_of_Bag__c</fullName>
    <description>Added for Insurance Letters in &apos;QCC Insurance Letter Layout&apos;  Case  Page Layout</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Colour of Bag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>