force-app/main/default/objects/Case/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Standard expected completion date is 6 working days, please state the reasons if you require this request to be fulfilled earlier.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>