force-app/main/default/objects/Case/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>CRM-6493 - Case - new Commodity on Case</description>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACT (ACTIVE TEMPERATURE CONTROLLED SYSTEM)</fullName>
            </value>
            <value>
                <fullName>AOG (AIRCRAFT ON GROUND)</fullName>
            </value>
            <value>
                <fullName>AVI (LIVE ANIMALS)</fullName>
            </value>
            <value>
                <fullName>BKS (BOOK OR BROCHURE); NWP (PRINTED MATERIAL)</fullName>
            </value>
            <value>
                <fullName>BLOOD (MEDICAL BLOOD MUST RIDE); LHO (MEDICAL LIVE HUMAN ORGANS MUST RIDE)</fullName>
            </value>
            <value>
                <fullName>DIP (DIPLOMATIC MAIL)</fullName>
            </value>
            <value>
                <fullName>FLW (FLOWERS or PLANT); PEF (FRESH FLOWERS)</fullName>
            </value>
            <value>
                <fullName>FSE (FRESH SEAFOOD)</fullName>
            </value>
            <value>
                <fullName>FSH (LIVE FISH INCL TROPICAL IN OXY OR AERATED TANKS); LTF (LIVE FISH IN NON AERATED TANKS)</fullName>
            </value>
            <value>
                <fullName>GEN (GENERAL)</fullName>
            </value>
            <value>
                <fullName>GOV (GOVERNMENT ARTICLES)</fullName>
            </value>
            <value>
                <fullName>HEG (HATCHING EGGS)</fullName>
            </value>
            <value>
                <fullName>HUM - Human Remains</fullName>
            </value>
            <value>
                <fullName>ICE (DRY ICE - when booking Ice as a commodity; options vary when ICE is part of a shipment)</fullName>
            </value>
            <value>
                <fullName>ISO (MEDICAL ISOTOPES MUST RIDE); SRM (MEDICAL SURGERY RELATED MUST RIDE)</fullName>
            </value>
            <value>
                <fullName>LITIONBAT (LITHIUM ION BATTERIES DG EXEMPT)</fullName>
            </value>
            <value>
                <fullName>LITMETBAT (LITHIUM METAL BATTERIES DG EXEMPT)</fullName>
            </value>
            <value>
                <fullName>MDX (URGENT MEDICAL)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>PEM (CHILLED MEAT)</fullName>
            </value>
            <value>
                <fullName>PER (PERISHABLES)</fullName>
            </value>
            <value>
                <fullName>PHM (PHARMACEUTICALS); VAC (VACCINES)</fullName>
            </value>
            <value>
                <fullName>RDS (DIAGNOSTIC SPECIMENS)</fullName>
            </value>
            <value>
                <fullName>RIS (RESTRICTED INFECTED SUBSTANCE)</fullName>
            </value>
            <value>
                <fullName>RRY (Radioactives)</fullName>
            </value>
            <value>
                <fullName>SEA (LIVE CONSUMABLE SEAFOOD)</fullName>
            </value>
            <value>
                <fullName>SHL (Saving Human Life)</fullName>
            </value>
            <value>
                <fullName>VAL (VALUABLES)</fullName>
            </value>
            <value>
                <fullName>VUN (VULNERABLE CARGO)</fullName>
            </value>
            <value>
                <fullName>XPS (EXPRESS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>