force-app/main/default/objects/Case/fields/Condition_Met__c.field-meta.xml
<CustomField>
    <fullName>Condition_Met__c</fullName>
    <inlineHelpText>For Groups:
Within BART, Condition Met = Yes
Outside BART, Condition Met = No</inlineHelpText>
    <label>Condition Met</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>