force-app/main/default/objects/Case/fields/Conga_Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_Email_Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conga Email Template ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>