force-app/main/default/objects/Case/fields/Conga_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conga Template ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>