force-app/main/default/objects/Case/fields/Conga_Trigger_Formula__c.field-meta.xml
<CustomField>
    <fullName>Conga_Trigger_Formula__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;TemplateId=a0X2v00000TJZ0VEAX&quot;+
&quot;&amp;QueryId=[getemails]a0W2v00001EaF9TEAV,[files]a0W2v00001EaIjyEAF&quot;+
&quot;&amp;qmode=SalesforceFile&quot; +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;fp0=1&quot; +
&quot;&amp;ofn=&quot; + QCC_Email_PDF_File_Name__c +
&quot;&amp;sc1=SalesforceFile&quot;+
&quot;&amp;sc0=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Trigger Formula</label>
    <type>Text</type>
</CustomField>