force-app/main/default/objects/Case/fields/Consultant_Email__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>