force-app/main/default/objects/Case/fields/Consultant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Phone</label>
    <type>Phone</type>
</CustomField>