force-app/main/default/objects/Case/fields/Consultants_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>