force-app/main/default/objects/Case/fields/Contact_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fullname__c</fullName>
    <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>