force-app/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Key Coordinator from Corporate Scheme record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coordinator Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>