force-app/main/default/objects/Case/fields/Contents_of_Bag__c.field-meta.xml
<CustomField>
    <fullName>Contents_of_Bag__c</fullName>
    <description>QCC: Contents of the bag</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contents of Bag</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>