force-app/main/default/objects/Case/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>This field is used on the Dealing Model Request layout</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter the CURRENT contracted end date</inlineHelpText>
    <label>Current Contract End Date</label>
    <type>Date</type>
</CustomField>