force-app/main/default/objects/Case/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <formula>Account.Contracted__c</formula>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>