force-app/main/default/objects/Case/fields/Corporate_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Customer Account&apos;s name</inlineHelpText>
    <label>Corporate Organisation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No Customer Accounts</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests by Agencies</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>