force-app/main/default/objects/Case/fields/Cost_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sale__c</fullName>
    <inlineHelpText>If value not known, please insert zero</inlineHelpText>
    <label>Cost of Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>