force-app/main/default/objects/Case/fields/CRCM_eQ__c.field-meta.xml
<CustomField>
    <fullName>CRCM_eQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRCM_eQ is required claim stage= finalised.CRM-9062</description>
    <label>CRCM/eQ</label>
    <type>Checkbox</type>
</CustomField>